# Terraria-Fishing-Bot

./: .gitignore  Cargo.toml  README.md
src/: bot.rs  controller.rs  cursor_capturer.rs  detector.rs  lib.rs  logger.rs  main.rs  opencv.rs  settings.rs  sonar_detector.rs  ui.rs  ui_terminal.rs
