[package]
name = "terraria_fishing_bot"
version = "0.3.1"
edition = "2024"

[dependencies]
device_query = "4.0.1"
eframe = "0.33.3"
egui_extras = { version = "0.33.3", features = ["all_loaders"] }
enigo = "0.6.1"
image = "0.25.9"
mouse-rs = "0.4.2"
mouse_position = "0.1.4"
ndarray = "0.16.1"
ocrs = "0.12.1"
rten = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum_macros = "0.27.2"
xcap = "0.8.2"
